widget mondial relay

--- a/.env.local.example
+++ b/.env.local.example
@@ -10,3 +10,12 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-4BE047W3VN"
 # URL de redirection après connexion/déconnexion
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="votre-secret-tres-long-et-securise"
+
+# Configuration Stripe
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="votre_cle_publique_stripe"
+STRIPE_SECRET_KEY="votre_cle_secrete_stripe"
+STRIPE_WEBHOOK_SECRET="votre_secret_webhook_stripe"
+
+# Configuration Mondial Relay
+NEXT_PUBLIC_MONDIAL_RELAY_BRAND="BDTEST"  # Code enseigne Mondial Relay
+NEXT_PUBLIC_MONDIAL_RELAY_COUNTRY="FR"    # Code pays par défaut
